--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.1.6" %}
+{% set version = "0.2.3" %}
 
 package:
   name: clickhouse-sqlalchemy
@@ -6,23 +6,26 @@ package:
 
 source:
   url: https://pypi.io/packages/source/c/clickhouse-sqlalchemy/clickhouse-sqlalchemy-{{ version }}.tar.gz
-  sha256: 402d112e2c7e8c7f28fd2691c5efaf701c1c19831c10a38c9355a07dd8d308a9
+  sha256: 6df4c125db428b856f8a7ec392190d9a4a2bb281eecb4fca2202e9d49ee4d55f
 
 build:
   number: 0
-  noarch: python
-  script: pip install . --no-deps --ignore-installed --no-cache-dir -vvv
+  # clickhouse-driver isn't available on s390x and aarch64.
+  skip: True  # [py<37 or (linux and (s390x or aarch64))]
+  script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
 
 requirements:
   host:
     - pip
+    - python
+    - setuptools
+    - wheel
 
   run:
     - python
-    - six
-    - sqlalchemy
+    - clickhouse-driver >=0.1.2
     - requests
-    - clickhouse-driver >=0.0.14
+    - sqlalchemy >=1.4,<1.5
 
 test:
   imports:
@@ -32,13 +35,21 @@ test:
     - clickhouse_sqlalchemy.drivers.native
     - clickhouse_sqlalchemy.orm
     - clickhouse_sqlalchemy.sql
+  requires:
+    - pip
+  commands: 
+    - pip check
 
 about:
   home: https://github.com/xzkostyan/clickhouse-sqlalchemy
+  dev_url: https://github.com/xzkostyan/clickhouse-sqlalchemy
+  doc_url: https://github.com/xzkostyan/clickhouse-sqlalchemy
   license: MIT
-  summary: Simple ClickHouse SQLAlchemy Dialect
-  license_file: LICENSE
   license_family: MIT
+  license_file: LICENSE
+  summary: Simple ClickHouse SQLAlchemy Dialect
+  description: |
+    Simple ClickHouse SQLAlchemy Dialect.
 
 extra:
   recipe-maintainers:
